src/rules/isort/snapshots/ruff__rules__isort__tests__no_lines_before.py.snap
---
source: src/rules/isort/mod.rs
expression: diagnostics
---
- kind:
    UnsortedImports: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 10
    column: 0
  fix:
    content: "from __future__ import annotations\n\nfrom typing import Any\n\nfrom my_first_party import my_first_party_object\nfrom requests import Session\n\nfrom . import my_local_folder_object\n"
    location:
      row: 1
      column: 0
    end_location:
      row: 10
      column: 0
  parent: ~

