src/rules/isort/snapshots/ruff__rules__isort__tests__order_by_type_with_custom_constants.py.snap
---
source: src/rules/isort/mod.rs
expression: diagnostics
---
- kind:
    UnsortedImports: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 3
    column: 0
  fix:
    content: "from subprocess import STDOUT, A_constant, Class, First, Last, func, konst, var\n\nfrom sklearn.svm import XYZ, Const, Klass, constant, func, variable\n"
    location:
      row: 1
      column: 0
    end_location:
      row: 3
      column: 0
  parent: ~

