src/rules/isort/snapshots/ruff__rules__isort__tests__order_by_type_with_custom_variables.py.snap
---
source: src/rules/isort/mod.rs
expression: diagnostics
---
- kind:
    UnsortedImports: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 3
    column: 0
  fix:
    content: "from subprocess import CONSTANT, Klass, Variable, exe, utils, var_ABC\n\nfrom sklearn.svm import CONST, VAR, Class, MyVar, abc\n"
    location:
      row: 1
      column: 0
    end_location:
      row: 3
      column: 0
  parent: ~

